# flight_data_rs

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/conf/: args.rs
src/servers/: inmem.rs  mod.rs  parquet.rs
